@@ -277,7 +277,7 @@ else {
 							print "</div>" ;
 							$time=date("H:i:s", strtotime($time)+3600) ;
 							$spinControl=0 ;
-							while ($time<=$timeEnd AND $spinControl<@(23-date("H",$timeStart))) {
+							while ($time<=$timeEnd AND $spinControl<(23-substr($timeStart,0,5))) {
 								$countTime++ ;
 								print "<div style='position: absolute; top:" . (($countTime*60)-5) . "px ; width: 71px ; border: none; height: 60px; margin: 0px; padding: 0px; font-size: 92%'>" ;
 									print substr($time,0,5) . "<br/>" ;
